package Classes;

public enum Body {

}
