package Classes;

public interface IRefueling {
    void fuel();
}
