package Classes;

public interface IWip {

    void wipWindshield();

    void wipHeadlights();

    void wipMirrors();

}
