package Classes;

public enum TypeFuel {
    GASOLINE,
    DIESEL
}
