package Classes;

public enum TypeGearbox {
    MANUAL,
    AUTO
}
